crates/schema-inference/src/snapshots/schema_inference__analyze__test__multi_merging.snap
---
source: crates/schema-inference/src/analyze.rs
assertion_line: 158
expression: schema
---
{
  "$schema": "http://json-schema.org/draft-07/schema#",
  "type": "object",
  "required": [
    "a",
    "b",
    "c"
  ],
  "properties": {
    "a": {
      "type": [
        "integer",
        "object"
      ],
      "required": [
        "imaginary",
        "real"
      ],
      "properties": {
        "imaginary": {
          "type": "integer"
        },
        "real": {
          "type": "number"
        }
      }
    },
    "b": {
      "type": "array",
      "items": {
        "type": [
          "boolean",
          "object"
        ],
        "required": [
          "truthful"
        ],
        "properties": {
          "harmless": {
            "type": "string"
          },
          "hurtful": {
            "type": "boolean"
          },
          "truthful": {
            "type": [
              "boolean",
              "string"
            ]
          }
        }
      }
    },
    "c": {
      "type": "object",
      "required": [
        "inner"
      ],
      "properties": {
        "even_more_optional": {
          "type": "boolean"
        },
        "inner": {
          "type": [
            "null",
            "object",
            "string"
          ],
          "required": [
            "details"
          ],
          "properties": {
            "details": {
              "type": "string"
            }
          }
        },
        "optional": {
          "type": "array",
          "items": {
            "type": "integer"
          }
        }
      }
    },
    "x": {
      "type": "string"
    },
    "y": {
      "type": "array",
      "items": {
        "type": "string"
      }
    },
    "z": {
      "type": "null"
    }
  }
}
