crates/schema-inference/src/snapshots/schema_inference__analyze__test__simple_schema_merging.snap
---
source: crates/schema-inference/src/analyze.rs
assertion_line: 123
expression: schema
---
{
  "$schema": "http://json-schema.org/draft-07/schema#",
  "type": "object",
  "required": [
    "a",
    "b",
    "c",
    "s"
  ],
  "properties": {
    "a": {
      "type": "integer"
    },
    "b": {
      "type": [
        "array",
        "null"
      ],
      "items": {
        "type": "boolean"
      }
    },
    "c": {
      "type": "object",
      "required": [
        "inner"
      ],
      "properties": {
        "inner": {
          "type": [
            "null",
            "string"
          ]
        },
        "optional": {
          "type": "array",
          "items": []
        }
      }
    },
    "s": {
      "type": [
        "object",
        "string"
      ],
      "required": [
        "sometimes"
      ],
      "properties": {
        "sometimes": {
          "type": "string"
        }
      }
    },
    "x": {
      "type": "string"
    },
    "y": {
      "type": "array",
      "items": {
        "type": "string"
      }
    }
  }
}
