crates/schema-inference/src/snapshots/schema_inference__analyze__test__very_nested.snap
---
source: crates/schema-inference/src/analyze.rs
assertion_line: 83
expression: schema
---
{
  "$schema": "http://json-schema.org/draft-07/schema#",
  "type": "object",
  "required": [
    "a",
    "one"
  ],
  "properties": {
    "a": {
      "type": "boolean"
    },
    "one": {
      "type": "object",
      "required": [
        "b",
        "two"
      ],
      "properties": {
        "b": {
          "type": "integer"
        },
        "two": {
          "type": "object",
          "required": [
            "c",
            "three"
          ],
          "properties": {
            "c": {
              "type": "number"
            },
            "three": {
              "type": "object",
              "required": [
                "d",
                "four"
              ],
              "properties": {
                "d": {
                  "type": "null"
                },
                "four": {
                  "type": "object",
                  "required": [
                    "e",
                    "five"
                  ],
                  "properties": {
                    "e": {
                      "type": "boolean"
                    },
                    "five": {
                      "type": "object",
                      "required": [
                        "f"
                      ],
                      "properties": {
                        "f": {
                          "type": "string"
                        }
                      }
                    }
                  }
                }
              }
            }
          }
        }
      }
    }
  }
}
